# EvasionBench

./: .coverage  .dvcignore  .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  CONTRIBUTING.md  Makefile  README.md  docker-compose.yml  dvc.yaml  environment.yml  package-lock.json  pyproject.toml  requirements.txt
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
api/: main.py
dashboard/: app.py  requirements.txt
docker/: Dockerfile
docs/: analysis_workflow.md  architecture.md  case_study.md  ci_baseline.md  dvc_guide.md  explainability_guide.md  hiring_manager_brief.md  label_quality_guide.md  mlflow_guide.md  model_optimization_guide.md  pages_data_contract.md  phase2_completion_report.md  reporting_pipeline.md  research_summary.md  script_first_workflow.md  transformer_xai_guide.md
notebooks/: 01_data_quality_and_statistics.ipynb  02_linguistic_patterns.ipynb  03_qa_interaction_analysis.ipynb  04_traditional_ml_baselines.ipynb  05_embedding_baselines.ipynb  06_transformer_finetuning.ipynb  07_advanced_transformer_methods.ipynb  08_multitask_learning.ipynb  09_explainability_analysis.ipynb  10_label_quality_study.ipynb  11_failed_hypotheses.ipynb  12_cross_domain_transfer.ipynb  13_production_model_selection.ipynb
papers/: README.md
plans/: phase8-next-steps.md  phase9-github-pages-and-expanded-analysis.md  portfolio_improvement_plan.md
scripts/: analyze_core_stats.py  analyze_error_profiles.py  analyze_lexical.py  analyze_linguistic_quality.py  analyze_phase9_exploration.py  analyze_qa_semantic.py  analyze_question_behavior.py  (+29 more)
(+262 files in other folders)
